fix codacy issues